# poetry-check-existing-plugin

./: .gitignore  README.md  pyproject.toml
poetry_check_existing_plugin/: artifactory.py  plugin.py
tests/: test_main.py
tests/data/v1/: pyproject.toml
tests/data/v2/: pyproject.toml
