[tool.poetry]
name = "poetry-check-existing-plugin"
version = "0.1.0"
description = "Poetry plugin to check if a package with the same version already exists in a pypi index."
authors = ["Rustem Galiullin <rustemgal@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "poetry_check_existing_plugin"}]
