[tool.poetry]
name = "version-two-project-name"
version = "2.0.1"
description = "Poetry plugin to check if a package with the same version already exists in a pypi index."
authors = ["Rustem Galiullin <rustemgal@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "poetry_check_existing_plugin"}]

[[tool.poetry.source]]
name = "pypi-artifactory"
url = "https://artifactory.example.com/artifactory/api/pypi/pypi-artifactory/"
default = false
secondary = false